Implemented "Log In" feature.

--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -1,6 +1,6 @@
 ##
 ## Global resource bundle for Marvin. 
-## Language: default (English)
+## Language: American English
 ##
 
 # For the nemo-utils default decorator:
@@ -68,5 +68,8 @@ regex.email.message = This is not a valid email address.
 regex.confirmationCode.message = This confirmation code given is not valid.
 
 # Global messages for Marvin
+menu.profile = Profile
+menu.logout = Sign Out
 title.home = Welcome to Marvin
 title.menu = MAIN MENU
+text.memberSince = Member since {0,date,medium}
