--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -28,3 +28,15 @@ installSystem.text.instructions.config = To finish installation, it is necessary
 installSystem.text.done = Congratulations! Marvin was correctly installed. Please log in using the link available in the main menu.
 installSystem.title = System installation
 installSystem.title.description = Basic setup to get Marvin up and running.
+
+# Text for use case "Log In":
+login.button.login = Sign In
+login.field.email = E-mail
+login.field.password = Password
+login.text.instructions = Please enter your credentials.
+login.title = Log In
+login.title.description = Identify yourself in order to use Marvin
+login.error.nomatch.summary = Authentication problem.
+login.error.nomatch.detail = E-mail and/or password don't match. Please try again. If the error persists and you are sure of your credentials, please contact the administrator.
+login.error.fatal.summary = Authentication error.
+login.error.fatal.detail = Please, contact the administrators and inform the exact date and time this error occurred: {0,date,full} {0,time,full}.
