arquivos para cadastro de academic

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -40,3 +40,35 @@ login.error.nomatch.summary = Authentication problem.
 login.error.nomatch.detail = E-mail and/or password don't match. Please try again. If the error persists and you are sure of your credentials, please contact the administrator.
 login.error.fatal.summary = Authentication error.
 login.error.fatal.detail = Please, contact the administrators and inform the exact date and time this error occurred: {0,date,full} {0,time,full}.
+
+
+
+
+
+
+
+
+manageAcademic.title=Manage Academic
+manageAcademic.title.name=Name
+manageAcademic.placeholder.name= Full Academic's Name
+manageAcademic.title.shortName = Short Name
+manageAcademic.placeholder.shortName= Short Name
+manageAcademic.title.email=Email
+manageAcademic.placeholder.email= Academic's Email
+#manageAcademic.title.error=Error
+#manageAcademic.message.error=Não foi possível salvar o Administrador
+manageAcademic.title.create=Register new Academic
+manageAcademic.title.update=Update Academic
+manageAcademic.title.retrieve= Academic's data
+#manageAcademic.text.filter.byName=Filtar por Nome
+manageAcademic.text.noEntitiesFiltered=No found Academic for this filter
+manageAcademic.title.formulario=Formul\u00E1rio de Cadastro do Academic
+manageAcademic.text.noEntities=No Academic registered yet
+manageAcademic.title.box.list=Table with the academics registered
+manageAcademic.title.box.trash=Table with the Academics to be deleted
+
+
+#manageAcademic.placeholder.matricula= Matricula do Administrador na UFES
+#manageAcademicControl.text.createSucceeded = teste ok
+#manageAcademicControl.error.delete = Não foi possível excluir, verifique se você tem permissão, se o administrador não esta coordenando um curso, para poder realizar a exclusão do administrador:   
+#manageAcademicControl.error.save = Não foi possível salvar o administrador, verifique se o email ou matricula ou cpf já estão cadastrados.
