--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -72,3 +72,39 @@ manageAcademic.title.box.trash=Table with the Academics to be deleted
 #manageAcademicControl.text.createSucceeded = teste ok
 #manageAcademicControl.error.delete = Não foi possível excluir, verifique se você tem permissão, se o administrador não esta coordenando um curso, para poder realizar a exclusão do administrador:   
 #manageAcademicControl.error.save = Não foi possível salvar o administrador, verifique se o email ou matricula ou cpf já estão cadastrados.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+manageCourse.title=Manage Course
+manageCourse.title.name=Name
+manageCourse.title.code=Code
+manageCourse.title.box.list= Registered Courses 
+manageCourse.title.box.trash=Table with the courses to be excluded
+
+manageCourse.title.create=Register New Course
+manageCourse.title.update=Update Course
+manageCourse.title.retrieve=Course's data
+manageCourse.title.form=Course Registration  Form
+
+manageCourse.text.noEntitiesFiltered=No found Course for this filter
+manageCourse.text.noEntities=No registered  Course yet
+
+manageCourse.placeholder.name= name of the Course
+manageCourse.placeholder.code= code of the Course
+
+
+
+
