--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -55,6 +55,7 @@ manageAcademic.title.shortName = Short Name
 manageAcademic.placeholder.shortName= Short Name
 manageAcademic.title.email=Email
 manageAcademic.placeholder.email= Academic's Email
+manageAcademic.title.academicType = Academic Types
 #manageAcademic.title.error=Error
 #manageAcademic.message.error=Não foi possível salvar o Administrador
 manageAcademic.title.create=Register new Academic
