--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -94,7 +94,7 @@ manageCourse.title.name=Name
 manageCourse.title.code=Code
 manageCourse.title.box.list= Registered Courses 
 manageCourse.title.box.trash=Table with the courses to be excluded
-
+manageCourse.title.coordinator = Coordinator
 manageCourse.title.create=Register New Course
 manageCourse.title.update=Update Course
 manageCourse.title.retrieve=Course's data
