atualização para o plural de CRUD academic

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -48,31 +48,31 @@ login.error.fatal.detail = Please, contact the administrators and inform the exa
 
 
 
-manageAcademic.title=Manage Academic
-manageAcademic.title.name=Name
-manageAcademic.placeholder.name= Full Academic's Name
-manageAcademic.title.shortName = Short Name
-manageAcademic.placeholder.shortName= Short Name
-manageAcademic.title.email=Email
-manageAcademic.placeholder.email= Academic's Email
-manageAcademic.title.academicType = Academic Types
-#manageAcademic.title.error=Error
-#manageAcademic.message.error=Não foi possível salvar o Administrador
-manageAcademic.title.create=Register new Academic
-manageAcademic.title.update=Update Academic
-manageAcademic.title.retrieve= Academic's data
-#manageAcademic.text.filter.byName=Filtar por Nome
-manageAcademic.text.noEntitiesFiltered=No found Academic for this filter
-manageAcademic.title.formulario=Formul\u00E1rio de Cadastro do Academic
-manageAcademic.text.noEntities=No Academic registered yet
-manageAcademic.title.box.list=Table with the academics registered
-manageAcademic.title.box.trash=Table with the Academics to be deleted
+manageAcademics.title=Manage Academics
+manageAcademics.title.name=Name
+manageAcademics.placeholder.name= Full Academic's Name
+manageAcademics.title.shortName = Short Name
+manageAcademics.placeholder.shortName= Short Name
+manageAcademics.title.email=Email
+manageAcademics.placeholder.email= Academic's Email
+manageAcademics.title.academicType = Academic Types
+#manageAcademics.title.error=Error
+#manageAcademics.message.error=Não foi possível salvar o Administrador
+manageAcademics.title.create=Register new Academic
+manageAcademics.title.update=Update Academic
+manageAcademics.title.retrieve= Academic's data
+#manageAcademics.text.filter.byName=Filtar por Nome
+manageAcademics.text.noEntitiesFiltered=No found Academic for this filter
+manageAcademics.title.form=Registration form for Academics
+manageAcademics.text.noEntities=No Academic registered yet
+manageAcademics.title.box.list=Table with the academics registered
+manageAcademics.title.box.trash=Table with the Academics to be deleted
 
 
-#manageAcademic.placeholder.matricula= Matricula do Administrador na UFES
-#manageAcademicControl.text.createSucceeded = teste ok
-#manageAcademicControl.error.delete = Não foi possível excluir, verifique se você tem permissão, se o administrador não esta coordenando um curso, para poder realizar a exclusão do administrador:   
-#manageAcademicControl.error.save = Não foi possível salvar o administrador, verifique se o email ou matricula ou cpf já estão cadastrados.
+#manageAcademics.placeholder.matricula= Matricula do Administrador na UFES
+#manageAcademicsControl.text.createSucceeded = teste ok
+#manageAcademicsControl.error.delete = Não foi possível excluir, verifique se você tem permissão, se o administrador não esta coordenando um curso, para poder realizar a exclusão do administrador:   
+#manageAcademicsControl.error.save = Não foi possível salvar o administrador, verifique se o email ou matricula ou cpf já estão cadastrados.
 
 
 
