--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -17,18 +17,23 @@ installSystem.error.passwordsDontMatch.detail = Please, make sure you typed the 
 installSystem.error.installFailed.summary = Error during system install.
 installSystem.error.installFailed.detail = A failure during the operation has prevented system installation. Please, contact Marvin's support.
 installSystem.field.admin.name = Full name
+installSystem.field.admin.name.placeholder = Your full name, please
 installSystem.field.admin.email = E-mail
+installSystem.field.admin.email.placeholder = Your e-mail will be used to identify you
 installSystem.field.admin.shortName = Short name
+installSystem.field.admin.shortName.placeholder = How would you like to be called?
 installSystem.field.admin.password = Password
 installSystem.field.admin.repeatPassword = Confirm the password
-installSystem.field.config.institutionAcronym = Institution acronym 
+installSystem.field.config.institutionAcronym = Institution acronym
+installSystem.field.config.institutionAcronym.placeholder = This acronym will be shown next to Marvin at the top-left
+installSystem.form.admin = Administrator information
+installSystem.form.config = Marvin configuration
 installSystem.text.systemAlreadyInstalled = Marvin is installed. Please log in using the link available in the main menu.
 installSystem.text.instructions.admin = To install Marvin, it's necessary to register an administrator. Please, fill in the form below with information from the person who will manage the system.
 installSystem.text.instructions.config = To finish installation, it is necessary to provide configuration information. Please, fill in the form below with the acronym of your institution.  
 installSystem.text.done = Congratulations! Marvin was correctly installed. Please log in using the link available in the main menu.
-installSystem.title = System installation
+installSystem.title = System Installation
 installSystem.title.description = Basic setup to get Marvin up and running.
-
 # Text for use case "Log In":
 login.button.login = Sign In
 login.field.email = E-mail
@@ -77,18 +82,6 @@ manageAcademics.title.box.trash=Table with the Academics to be deleted
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 manageCourse.title=Manage Course
 manageCourse.title.name=Name
 manageCourse.title.code=Code
@@ -105,7 +98,4 @@ manageCourse.text.noEntities=No registered  Course yet
 
 manageCourse.placeholder.name= name of the Course
 manageCourse.placeholder.code= code of the Course
-
-
-
 
