atualizando manageacedemics para novo layout

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -66,9 +66,10 @@ manageAcademics.title.academicType = Academic Types
 manageAcademics.title.create=Register new Academic
 manageAcademics.title.update=Update Academic
 manageAcademics.title.retrieve= Academic's data
-#manageAcademics.text.filter.byName=Filtar por Nome
+manageAcademics.text.filter.byName=Filter by Name
 manageAcademics.text.noEntitiesFiltered=No found Academic for this filter
 manageAcademics.title.form=Registration form for Academics
+manageAcademics.title.form.filter=Filter
 manageAcademics.text.noEntities=No Academic registered yet
 manageAcademics.title.box.list=Table with the academics registered
 manageAcademics.title.box.trash=Table with the Academics to be deleted
