--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -26,6 +26,14 @@ installSystem.field.admin.password = Password
 installSystem.field.admin.repeatPassword = Confirm the password
 installSystem.field.config.institutionAcronym = Institution acronym
 installSystem.field.config.institutionAcronym.placeholder = This acronym will be shown next to Marvin at the top-left
+installSystem.field.config.smtpServerAddress= Server Address
+installSystem.field.config.smtpServerAddress.placeholder= Server Address
+installSystem.field.config.smtpServerPort= Server Port
+installSystem.field.config.smtpServerPort.placeholder= Server Port
+installSystem.field.config.smtpUsername= Username
+installSystem.field.config.smtpUsername.placeholder= email for send of messages
+installSystem.field.config.smtpPassword= Password
+installSystem.field.config.smtpPassword.placeholder=User's Password
 installSystem.form.admin = Administrator information
 installSystem.form.config = Marvin configuration
 installSystem.text.systemAlreadyInstalled = Marvin is installed. Please log in using the link available in the main menu.
