Create roles and assign admin role during installation.
During "Install System", roles are created reading from JSON objects in
META-INF/installSystem/Role.json and the Academic that is created during
installation gets the SysAdmin role assigned to her.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -3,6 +3,13 @@
 ## Language: American English 
 ##
 
+# Role descriptions.
+core.role.sysadmin = System Administrator (full access).
+core.role.professor = Professor at {0}.
+core.role.staff = Staff at {0}.
+core.role.student = Student at {0}.
+core.role.alumni = Alumni from {0}.
+
 # Menu labels for all functionalities of the package:
 core.menu.installSystem = Install System
 core.menu.login = Log in
@@ -25,7 +32,7 @@ installSystem.field.admin.shortName.placeholder = How would you like to be calle
 installSystem.field.admin.password = Password
 installSystem.field.admin.repeatPassword = Confirm the password
 installSystem.field.config.institutionAcronym = Institution acronym
-installSystem.field.config.institutionAcronym.placeholder = This acronym will be shown next to Marvin at the top-left
+installSystem.field.config.institutionAcronym.placeholder = This acronym will be used to customize some system messages
 installSystem.form.admin = Administrator information
 installSystem.form.config = Marvin configuration
 installSystem.text.systemAlreadyInstalled = Marvin is installed. Please log in using the link available in the main menu.
