Add JAAS authentication and Base64 encoding to passwords.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -13,6 +13,9 @@ core.role.alumni = Alumni from {0}.
 # Menu labels for all functionalities of the package:
 core.menu.installSystem = Install System
 core.menu.login = Log in
+core.menu.userManagement = User Management
+core.menu.userManagement.manageAcademics = Manage Academics
+core.menu.userManagement.assignRoles = Assign Roles
 
 # Text for use case "Install System":
 installSystem.button.registerAdministrator = Register admin
