Add auth. to Manage Academics and create error pages

--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -74,8 +74,17 @@ jbutler.regex.confirmationCode.message = This confirmation code given is not val
 
 
 # Global messages for Marvin
+description.error = Freeze? I'm a robot. I'm not a refrigerator.
+error.auth.detail = You do not have permission to access this part of the system. Please log in and make sure you have the appropriate credentials. If the error persists, contact the system administrator, informing the precise date/time of this error: {0,date,full} {0,time,full}.
+error.auth.summary = Access Denied
+error.expired.detail = Your session has expired. Please log in again.
+error.expired.summary = Session Expired
+error.other.detail = An unexpected error occurred. Please contact the system administrator, informing the precise date/time of this error: {0,date,full} {0,time,full}.
+error.other.summary = Unknown Error
 menu.profile = Profile
 menu.logout = Sign Out
+title.error = Something went wrong
 title.home = Welcome to Marvin
 title.menu = MAIN MENU
+text.backToIndex = Back to the start
 text.memberSince = Member since {0,date,medium}
