Implement part of the "Assign Roles" UC.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -5,10 +5,10 @@
 
 # Role descriptions.
 core.role.sysadmin = System Administrator (full access).
-core.role.professor = Professor at {0}.
-core.role.staff = Staff at {0}.
-core.role.student = Student at {0}.
-core.role.alumni = Alumni from {0}.
+core.role.professor = Permanent or temporary professor.
+core.role.staff = Technical and administrative staff.
+core.role.student = Enrolled student.
+core.role.alumni = Alumni (former student, graduated).
 
 # Menu labels for all functionalities of the package:
 core.menu.installSystem = Install System
@@ -60,6 +60,17 @@ login.title = Log In
 login.title.description = Identify yourself in order to use Marvin
 
 # Text for use case "Manage Academics":
+manageAcademics.form.title = Academic registration form
+manageAcademics.field.birthDate = Birth date
+manageAcademics.field.email = E-mail
+manageAcademics.field.name = Name
+manageAcademics.field.name.placeholder = Full name of the academic
+manageAcademics.field.roles = Roles
+manageAcademics.field.shortName = Short name
+manageAcademics.field.shortName.placeholder = The name you prefer to be called
+manageAcademics.text.filter.byName = Filter by name:
+manageAcademics.text.noEntities = No Academic registered yet
+manageAcademics.text.noEntitiesFiltered = No found Academic for this filter
 manageAcademics.title = Manage Academics
 manageAcademics.title.description = Create, retrieve, update and delete data about academics
 manageAcademics.title.create = Register new Academic
@@ -69,14 +80,3 @@ manageAcademics.title.update = Update Academic
 manageAcademics.title.update.description = Modify an existing academic's information
 manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
-manageAcademics.text.filter.byName = Filter by name:
-manageAcademics.text.noEntities = No Academic registered yet
-manageAcademics.text.noEntitiesFiltered = No found Academic for this filter
-manageAcademics.form.birthDate = Birth date
-manageAcademics.form.email = E-mail
-manageAcademics.form.name = Name
-manageAcademics.form.name.placeholder = Full name of the academic
-manageAcademics.form.shortName = Short name
-manageAcademics.form.shortName.placeholder = The name you prefer to be called
-manageAcademics.form.email = E-mail
-manageAcademics.form.title = Academic registration form
