Show creation, last update and last login date when viewing an academic

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -62,7 +62,10 @@ login.title.description = Identify yourself in order to use Marvin
 # Text for use case "Manage Academics":
 manageAcademics.form.title = Academic registration form
 manageAcademics.field.birthDate = Birth date
+manageAcademics.field.creationDate = Created at
 manageAcademics.field.email = E-mail
+manageAcademics.field.lastLoginDate = Last login at
+manageAcademics.field.lastUpdateDate = Updated at
 manageAcademics.field.name = Name
 manageAcademics.field.name.placeholder = Full name of the academic
 manageAcademics.field.roles = Roles
