--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -56,10 +56,11 @@ jbutler.crud.hotkey.back = esc
 jbutler.crud.text.trashHeader = Items to delete:
 
 # JButler default formats:
-jbutler.format.date.java=dd/MM/yyyy
+jbutler.format.date.java=MM/dd/yyyy
 jbutler.format.date.primefaces=99/99/9999
-jbutler.format.date.label=dd/mm/aaaa
-jbutler.format.datetime.java=dd/MM/yyyy HH:mm:ss
+jbutler.format.date.label=mm/dd/yyyy
+jbutler.format.datetime.java=MM/dd/yyyy HH:mm:ss
+jbutler.format.datetime.label=mm/dd/yyyy hh:mm:ss
 jbutler.format.taxCode.primefaces=999.999.999-99
 jbutler.format.taxCode.label=\#\#\#.\#\#\#.\#\#\#-\#\#
 jbutler.format.zipCode.primefaces=99999-999
