Fix 1st bug in #6:
"When clicking the Delete button, the trash panel (Items to delete) is
not shown via AJAX".

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -60,6 +60,7 @@ login.title = Log In
 login.title.description = Identify yourself in order to use Marvin
 
 # Text for use case "Manage Academics":
+manageAcademics.error.deleteAdmin = Cannot delete user {0}: user has System Administrator privileges
 manageAcademics.form.title = Academic registration form
 manageAcademics.field.birthDate = Birth date
 manageAcademics.field.creationDate = Created at
