Fix 2nd bug in #6
"When confirming the deletion of an administrator, the constraint stops
the action but there is no error message"

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -72,9 +72,10 @@ manageAcademics.field.name.placeholder = Full name of the academic
 manageAcademics.field.roles = Roles
 manageAcademics.field.shortName = Short name
 manageAcademics.field.shortName.placeholder = The name you prefer to be called
+manageAcademics.text.deleteSucceeded = Successfully deleted {0,choice,0#no academics|1#one academic|1<{0,number,integer} academics}
 manageAcademics.text.filter.byName = Filter by name:
 manageAcademics.text.noEntities = No Academic registered yet
-manageAcademics.text.noEntitiesFiltered = No found Academic for this filter
+manageAcademics.text.noEntitiesFiltered = No academic found for this filter
 manageAcademics.title = Manage Academics
 manageAcademics.title.description = Create, retrieve, update and delete data about academics
 manageAcademics.title.create = Register new Academic
