Add lattesId field to Academic and default order-by to AcademicDAO
The default order-by in the Academic's DAO is used in the CRUD for
Academic objects, showing them in this order in the listing.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -65,6 +65,8 @@ manageAcademics.form.title = Academic registration form
 manageAcademics.field.birthDate = Birth date
 manageAcademics.field.creationDate = Created at
 manageAcademics.field.email = E-mail
+manageAcademics.field.lattesId = Lattes ID
+manageAcademics.field.lattesId.placeholder = Long number at the end of the URL of the CV in the Lattes platform (http://lattes.cnpq.br/<Lattes ID>)
 manageAcademics.field.lastLoginDate = Last login at
 manageAcademics.field.lastUpdateDate = Updated at
 manageAcademics.field.name = Name
