--- a/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
@@ -8,13 +8,24 @@ core.menu.research = Research
 core.menu.research.uploadLattesCV = Upload Lattes CV
 
 # Text for use case "Upload Lattes CV":
+uploadLattesCV.button.cancel = Cancel
+uploadLattesCV.button.confirm = Confirm
 uploadLattesCV.button.upload = Upload
 uploadLattesCV.error.lattesIdNotRegistered.summary = Researcher not found
 uploadLattesCV.error.lattesIdNotRegistered.detail = There are no academics with Lattes ID {0} in the system. If {1} is registered, make sure he/she is associated with this Lattes ID.
 uploadLattesCV.error.lattesParseError.summary = Lattes parse error
 uploadLattesCV.error.lattesParseError.detail = There was an error parsing the uploaded Lattes CV. If the error persists, please contact the administrators.
 uploadLattesCV.field.file = XML File
+uploadLattesCV.field.title = Title
+uploadLattesCV.field.type = Type
+uploadLattesCV.field.type.book = Book
+uploadLattesCV.field.type.bookchapter = Chapter
+uploadLattesCV.field.type.conferencepaper = Conference
+uploadLattesCV.field.type.journalpaper = Journal
+uploadLattesCV.field.year = Year
 uploadLattesCV.form.upload = Lattes CV upload
-uploadLattesCV.text.instructions = Upload the XML version of a Lattes CV for one of the researchers registered in the system. You can obtain the XML CV by opening the researcher's Lattes CV and, after passing through the captcha, clicking on the XML button at the top of the page.
+uploadLattesCV.text.instructions.confirm = Please review the publications extracted from the uploaded CV and confirm you wish to assign them to {0}. Note that all publications currently assigned to this researcher will be deleted and replaced by the ones below. This researcher currently has {1,choice,0#no publications|1#one publication|1<{1,number,integer} publications} and will have {2,choice,0#no publications|1#one publication|1<{2,number,integer} publications}.  
+uploadLattesCV.text.instructions.upload = Upload the XML version of a Lattes CV for one of the researchers registered in the system. You can obtain the XML CV by opening the researcher's Lattes CV and, after passing through the captcha, clicking on the XML button at the top of the page.
+uploadLattesCV.text.noPublications = No publications were found in the uploaded CV.
 uploadLattesCV.title = Upload Lattes CV
 uploadLattesCV.title.description = Extract research information on the academic automatically from their Lattes curriculum.
