Persist publications. Close #7.

--- a/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
@@ -11,6 +11,8 @@ core.menu.research.uploadLattesCV = Upload Lattes CV
 uploadLattesCV.button.cancel = Cancel
 uploadLattesCV.button.confirm = Confirm
 uploadLattesCV.button.upload = Upload
+uploadLattesCV.button.uploadAnother = Upload Another CV
+uploadLattesCV.button.viewResearchers = View Researchers
 uploadLattesCV.error.lattesIdNotRegistered.summary = Researcher not found
 uploadLattesCV.error.lattesIdNotRegistered.detail = There are no academics with Lattes ID {0} in the system. If {1} is registered, make sure he/she is associated with this Lattes ID.
 uploadLattesCV.error.lattesParseError.summary = Lattes parse error
@@ -24,7 +26,8 @@ uploadLattesCV.field.type.conferencepaper = Conference
 uploadLattesCV.field.type.journalpaper = Journal
 uploadLattesCV.field.year = Year
 uploadLattesCV.form.upload = Lattes CV upload
-uploadLattesCV.text.instructions.confirm = Please review the publications extracted from the uploaded CV and confirm you wish to assign them to {0}. Note that all publications currently assigned to this researcher will be deleted and replaced by the ones below. This researcher currently has {1,choice,0#no publications|1#one publication|1<{1,number,integer} publications} and will have {2,choice,0#no publications|1#one publication|1<{2,number,integer} publications}.  
+uploadLattesCV.text.instructions.confirm = Please review the publications extracted from the uploaded CV and confirm you wish to assign them to {0}. Note that all publications currently assigned to this researcher will be deleted and replaced by the ones below. This researcher currently has {1,choice,0#no publications|1#one publication|1<{1,number,integer} publications} and will have {2,choice,0#no publications|1#one publication|1<{2,number,integer} publications}.
+uploadLattesCV.text.instructions.success = Successfully assigned {0,choice,0#no publications|1#one publication|1<{0,number,integer} publications} to {1}. Any previously assigned publications were deleted.  
 uploadLattesCV.text.instructions.upload = Upload the XML version of a Lattes CV for one of the researchers registered in the system. You can obtain the XML CV by opening the researcher's Lattes CV and, after passing through the captcha, clicking on the XML button at the top of the page.
 uploadLattesCV.text.noPublications = No publications were found in the uploaded CV.
 uploadLattesCV.title = Upload Lattes CV
