Implement the user interface for Generate Bibliography (related to #15)
Lacking the actual generation of the BibTeX code to display at the
result page.

--- a/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/research/view/messages.properties
@@ -5,6 +5,7 @@
 
 # Menu labels for all functionalities of the package:
 core.menu.research = Research
+core.menu.research.generateBibliography = Generate Bibliography
 core.menu.research.uploadLattesCV = Upload Lattes CV
 
 # Text for use case "Upload Lattes CV":
@@ -12,7 +13,7 @@ uploadLattesCV.button.cancel = Cancel
 uploadLattesCV.button.confirm = Confirm
 uploadLattesCV.button.upload = Upload
 uploadLattesCV.button.uploadAnother = Upload Another CV
-uploadLattesCV.button.viewResearchers = View Researchers
+uploadLattesCV.button.listResearchers = List Researchers
 uploadLattesCV.error.lattesIdNotRegistered.summary = Researcher not found
 uploadLattesCV.error.lattesIdNotRegistered.detail = There are no academics with Lattes ID {0} in the system. If {1} is registered, make sure he/she is associated with this Lattes ID.
 uploadLattesCV.error.lattesParseError.summary = Lattes parse error
@@ -32,3 +33,28 @@ uploadLattesCV.text.instructions.upload = Upload the XML version of a Lattes CV 
 uploadLattesCV.text.noPublications = No publications were found in the uploaded CV.
 uploadLattesCV.title = Upload Lattes CV
 uploadLattesCV.title.description = Extract research information on the academic automatically from their Lattes curriculum.
+
+# Text for use case "Generate Bibliography"
+generateBibliography.button.addResearcher = Add
+generateBibliography.button.back = Go Back
+generateBibliography.button.download = Download
+generateBibliography.button.generate = Generate
+generateBibliography.button.startOver = Start Over
+generateBibliography.field.endYear = End year
+generateBibliography.field.endYear.empty = -
+generateBibliography.field.endYear.placeholder = Consider publications up to this year. Leave blank not to constrain.
+generateBibliography.field.numberOfPublications = Publications
+generateBibliography.field.researcher = Researcher
+generateBibliography.field.researchers = Researchers
+generateBibliography.field.startYear = Start year
+generateBibliography.field.startYear.empty = -
+generateBibliography.field.startYear.placeholder = Consider publications from this year. Leave blank not to constrain.
+generateBibliography.form.generate = Bibliography generation configuration
+generateBibliography.form.result = Resulting bibliography
+generateBibliography.text.instructions = Select one or more researchers whose publications you would like to include in the generated bibliography file. Optionally, you can specify start/end year (inclusive) for each researcher and/or for the entire generated file. Leave year fields empty if you don't want to constrain.
+generateBibliography.text.noBibGenResearchers = No researchers added to the configuration yet.
+generateBibliography.text.result = The bibliography file has been generated. You can download it using the button below.
+generateBibliography.title = Generate Bibliography
+generateBibliography.title.description = Generates a bibliography file with entries from researchers' publications.
+
+
