--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -35,6 +35,11 @@ installSystem.field.admin.password = Password
 installSystem.field.admin.repeatPassword = Confirm the password
 installSystem.field.config.institutionAcronym = Institution acronym
 installSystem.field.config.institutionAcronym.placeholder = This acronym will be used to customize some system messages
+installSystem.field.config.smtpServerAddress = SMTP Server
+installSystem.field.config.smtpServerAddress.placeholder = Address of the server that Marvin will use to send e-mails
+installSystem.field.config.smtpServerPort = SMTP Port
+installSystem.field.config.smtpUsername = SMTP Username
+installSystem.field.config.smtpPassword = SMTP Password
 installSystem.form.admin = Administrator information
 installSystem.form.config = Marvin configuration
 installSystem.text.systemAlreadyInstalled = Marvin is installed. Please log in using the link available in the main menu.
