Configure REST application and service /changePassword.
Related to #2. Configured a REST application at /rest and a Change
Password service at /rest/changePassword (therefore the URL at the
e-mail template was changed as well). Next: have the REST service send
the password code (received as URL parameter) to the JSF controller.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -91,3 +91,7 @@ manageAcademics.title.update = Update Academic
 manageAcademics.title.update.description = Modify an existing academic's information
 manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
+
+# Text for use case "Change Password":
+changePassword.title = Change Password
+changePassword.title.description = Set a new password for your Marvin account
