--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -23,8 +23,8 @@ installSystem.dialog.wait.title = Installing...
 installSystem.dialog.wait.contents = Marvin is being installed. Please wait until this operation finishes.
 installSystem.error.passwordsDontMatch.summary = Attention: passwords don't match.
 installSystem.error.passwordsDontMatch.detail = Please, make sure you typed the same password in both fields.
-installSystem.error.installFailed.summary = Error during system install.
-installSystem.error.installFailed.detail = A failure during the operation has prevented system installation. Please, contact Marvin's support.
+installSystem.error.operationFailed.summary = Error during system install.
+installSystem.error.operationFailed.detail = A failure during the operation has prevented system installation. Please, contact Marvin's support.
 installSystem.field.admin.name = Full name
 installSystem.field.admin.name.placeholder = Your full name, please
 installSystem.field.admin.email = E-mail
@@ -93,5 +93,16 @@ manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
 
 # Text for use case "Change Password":
+changePassword.button.new = Set new password
+changePassword.error.operationFailed.summary = Error while changing password.
+changePassword.error.operationFailed.detail = A failure during the operation has prevented the password change. Please, contact Marvin's support.
+changePassword.error.passwordsDontMatch.summary = Attention: passwords don't match.
+changePassword.error.passwordsDontMatch.detail = Please, make sure you typed the same password in both fields.
+changePassword.field.password = Password
+changePassword.field.repeatPassword = Confirm the password
+changePassword.form.new = Set a new password for 
+changePassword.text.done = The new password has been set. You can log in now.
+changePassword.text.instructions.new = {0}, please type the same password in both fields below and click the button to set it as your new password.
+changePassword.text.invalidCode = Sorry, this is not a valid code: {0}
 changePassword.title = Change Password
 changePassword.title.description = Set a new password for your Marvin account
