--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -94,15 +94,21 @@ manageAcademics.title.retrieve.description = View an existing academic's informa
 
 # Text for use case "Change Password":
 changePassword.button.new = Set new password
+changePassword.button.reset = Request reset link
 changePassword.error.operationFailed.summary = Error while changing password.
 changePassword.error.operationFailed.detail = A failure during the operation has prevented the password change. Please, contact Marvin's support.
 changePassword.error.passwordsDontMatch.summary = Attention: passwords don't match.
 changePassword.error.passwordsDontMatch.detail = Please, make sure you typed the same password in both fields.
+changePassword.field.email = E-mail
 changePassword.field.password = Password
 changePassword.field.repeatPassword = Confirm the password
 changePassword.form.new = Set a new password for 
+changePassword.message.resetRequested.summary = Reset password requested
+changePassword.message.resetRequested.detail = If the address {0} is registered in the system, an e-mail will be sent to that address with a link to set a new password.
 changePassword.text.done = The new password has been set. You can log in now.
 changePassword.text.instructions.new = {0}, please type the same password in both fields below and click the button to set it as your new password.
+changePassword.text.instructions.reset = Fill in below the e-mail used in your Marvin registration in order to get a link that allows you to change your password.
 changePassword.text.invalidCode = Sorry, this is not a valid code: {0}
 changePassword.title = Change Password
+changePassword.title.reset = Reset Password
 changePassword.title.description = Set a new password for your Marvin account
