Begin Edit Profile scenario. Revamped the login service. Related to #2.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -93,6 +93,7 @@ manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
 
 # Text for use case "Change Password":
+changePassword.button.change = Change password
 changePassword.button.new = Set new password
 changePassword.button.reset = Request reset link
 changePassword.error.operationFailed.summary = Error while changing password.
@@ -112,3 +113,10 @@ changePassword.text.invalidCode = Sorry, this is not a valid code: {0}
 changePassword.title = Change Password
 changePassword.title.reset = Reset Password
 changePassword.title.description = Set a new password for your Marvin account
+
+# Text for use case "Edit Profile":
+editProfile.field.name = Name
+editProfile.form.password.title = Change password
+editProfile.form.profile.title = Edit personal information
+editProfile.title = Edit Profile
+editProfile.title.description = Edit your personal information, change your password, etc.
