It was included the model and persistence classes about egress. The Person class and installSystem form have been updated with CPF field.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -31,6 +31,7 @@ installSystem.field.admin.email = E-mail
 installSystem.field.admin.email.placeholder = Your e-mail will be used to identify you
 installSystem.field.admin.shortName = Short name
 installSystem.field.admin.shortName.placeholder = How would you like to be called?
+installSystem.field.admin.cpf = CPF
 installSystem.field.admin.password = Password
 installSystem.field.admin.repeatPassword = Confirm the password
 installSystem.field.config.institutionAcronym = Institution acronym
