It was included cpf, identityCard, birthCity and nationality fields in Person class and changed Role class.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -8,7 +8,7 @@ core.role.sysadmin = System Administrator (full access).
 core.role.professor = Permanent or temporary professor.
 core.role.staff = Technical and administrative staff.
 core.role.student = Enrolled student.
-core.role.alumni = Alumni (former student, graduated).
+core.role.visitor = Visitor.
 
 # Menu labels for all functionalities of the package:
 core.menu.installSystem = Install System
