Add CPF, IdentityCard, BirthCity and Nationality fields in Academic Form.

--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -69,6 +69,8 @@ jbutler.format.zipCode.label=\#\#\#\#\#-\#\#\#
 # JButler regular expressions and validator messages.
 jbutler.regex.email=([^.@]+)(\\.[^.@]+)*@([^.@]+\\.)+([^.@]+)
 jbutler.regex.confirmationCode=[\\w\\-]\{36\}
+jbutler.regex.identityCard=9?9999999
+jbutler.regex.identityCard.message = This is not a valid identity card.
 jbutler.regex.email.message = This is not a valid email address.
 jbutler.regex.confirmationCode.message = This confirmation code given is not valid.
 
