--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -79,6 +79,13 @@ manageAcademics.field.name.placeholder = Full name of the academic
 manageAcademics.field.roles = Roles
 manageAcademics.field.shortName = Short name
 manageAcademics.field.shortName.placeholder = The name you prefer to be called
+manageAcademics.field.cpf = CPF
+manageAcademics.field.identityCard = Identity Card (RG)
+manageAcademics.field.identityCard.placeholder = Only Numbers
+manageAcademics.field.birthCity = Birth City
+manageAcademics.field.birthCity.placeholder = What city you were born?
+manageAcademics.field.nationality = Nationality
+manageAcademics.field.nationality.placeholder = Country name
 manageAcademics.text.deleteSucceeded = Successfully deleted {0,choice,0#no academics|1#one academic|1<{0,number,integer} academics}
 manageAcademics.text.filter.byName = Filter by name:
 manageAcademics.text.noEntities = No Academic registered yet
