Add Course CRUD. TODO - Develop the validates business rules in validateDelete method of MangeCourseServiceBean: // Rule 1: cannot delete a with course coordination. // Rule 2: cannot delete a with course attendance.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -13,8 +13,9 @@ core.role.visitor = Visitor.
 # Menu labels for all functionalities of the package:
 core.menu.installSystem = Install System
 core.menu.login = Log in
-core.menu.userManagement = User Management
-core.menu.userManagement.manageAcademics = Manage Academics
+core.menu.generalSettings = General Settings
+core.menu.generalSettings.manageAcademics = Manage Academics
+core.menu.generalSettings.manageCourses = Manage Courses
 
 # Text for use case "Install System":
 installSystem.button.registerAdministrator = Register admin
@@ -99,6 +100,28 @@ manageAcademics.title.update = Update Academic
 manageAcademics.title.update.description = Modify an existing academic's information
 manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
+
+# Text for use case "Manage Courses":
+manageCourses.form.title = Course registration form
+manageCourses.field.creationDate = Created at
+manageCourses.field.lastLoginDate = Last login at
+manageCourses.field.lastUpdateDate = Updated at
+manageCourses.field.name = Name
+manageCourses.field.name.placeholder = Name of the course
+manageCourses.field.academicLevels = Academic Level
+manageCourses.text.deleteSucceeded = Successfully deleted {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
+manageCourses.text.filter.byName = Filter by name:
+manageCourses.text.noEntities = No Course registered yet
+manageCourses.text.noEntitiesFiltered = No course found for this filter
+manageCourses.title = Manage Courses
+manageCourses.title.description = Create, retrieve, update and delete data about courses
+manageCourses.title.create = Register new Course
+manageCourses.title.create.description = Insert new academic information
+manageCourses.title.description = Create, retrieve, update and delete data about courses
+manageCourses.title.update = Update Course
+manageCourses.title.update.description = Modify an existing course's information
+manageCourses.title.retrieve = Course's data
+manageCourses.title.retrieve.description = View an existing course's information
 
 # Text for use case "Change Password":
 changePassword.button.change = Change password
