Add interface of course coordination.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -16,6 +16,7 @@ core.menu.login = Log in
 core.menu.generalSettings = General Settings
 core.menu.generalSettings.manageAcademics = Manage Academics
 core.menu.generalSettings.manageCourses = Manage Courses
+core.menu.generalSettings.courseCoordinations = Manage Course Coordinations
 
 # Text for use case "Install System":
 installSystem.button.registerAdministrator = Register admin
@@ -122,6 +123,13 @@ manageCourses.title.update = Update Course
 manageCourses.title.update.description = Modify an existing course's information
 manageCourses.title.retrieve = Course's data
 manageCourses.title.retrieve.description = View an existing course's information
+
+# Text for use case "Manage Course Coordination"
+courseCoordination.form.title = Course coordination form
+courseCoordination.title.assign = Assign a Course Coordination
+courseCoordination.title.description = Assign the coordination of a course to a professor
+courseCoordination.assign.button = Assign
+courseCoordination.assign.hotkey = Associate the course to the professor
 
 # Text for use case "Change Password":
 changePassword.button.change = Change password
