- Add code field in Course. Improving the Course Coordination.

--- a/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/core/view/messages.properties
@@ -103,13 +103,18 @@ manageAcademics.title.retrieve = Academic's data
 manageAcademics.title.retrieve.description = View an existing academic's information
 
 # Text for use case "Manage Courses":
+manageCourses.button.addCoordination = Add Coordination
+manageCourses.button.finalizeCoordination = Finalize Coordination
 manageCourses.form.title = Course registration form
 manageCourses.field.creationDate = Created at
 manageCourses.field.lastLoginDate = Last login at
 manageCourses.field.lastUpdateDate = Updated at
 manageCourses.field.name = Name
 manageCourses.field.name.placeholder = Name of the course
+manageCourses.field.courseCode = Code
 manageCourses.field.academicLevels = Academic Level
+manageCourses.field.courseCoordinator = Course Coordinator
+manageCourses.field.courseCoordinator.placeholder = Name of the Course Coordinator
 manageCourses.text.deleteSucceeded = Successfully deleted {0,choice,0#no courses|1#one course|1<{0,number,integer} courses}
 manageCourses.text.filter.byName = Filter by name:
 manageCourses.text.noEntities = No Course registered yet
@@ -123,13 +128,9 @@ manageCourses.title.update = Update Course
 manageCourses.title.update.description = Modify an existing course's information
 manageCourses.title.retrieve = Course's data
 manageCourses.title.retrieve.description = View an existing course's information
+manageCourses.title.courseCoordination = Course Coordination
+manageCourses.title.description.courseCoordination = Add or finalize a coordination on a course
 
-# Text for use case "Manage Course Coordination"
-courseCoordination.form.title = Course coordination form
-courseCoordination.title.assign = Assign a Course Coordination
-courseCoordination.title.description = Assign the coordination of a course to a professor
-courseCoordination.assign.button = Assign
-courseCoordination.assign.hotkey = Associate the course to the professor
 
 # Text for use case "Change Password":
 changePassword.button.change = Change password
