--- a/src/br/ufes/inf/nemo/marvin/messages.properties
+++ b/src/br/ufes/inf/nemo/marvin/messages.properties
@@ -71,6 +71,8 @@ jbutler.regex.email=([^.@]+)(\\.[^.@]+)*@([^.@]+\\.)+([^.@]+)
 jbutler.regex.confirmationCode=[\\w\\-]\{36\}
 jbutler.regex.identityCard=9?9999999
 jbutler.regex.identityCard.message = This is not a valid identity card.
+jbutler.regex.courseCode=9?999
+jbutler.regex.courseCode.message=This is not a valid code.
 jbutler.regex.email.message = This is not a valid email address.
 jbutler.regex.confirmationCode.message = This confirmation code given is not valid.
 
